# arm-deinterleaving-loads

./: .clangd  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/asm/: neon_deinterleave.S  scalar_deinterleave.S  sve_deinterleave.S
